Integrated JobDeviceManagementOperationService in Download/Uninstall Package job step
Signed-off-by: coduz <alberto.codutti@eurotech.com>

--- a/service/device/management/packages/job/pom.xml
+++ b/service/device/management/packages/job/pom.xml
@@ -34,6 +34,11 @@
 
         <dependency>
             <groupId>org.eclipse.kapua</groupId>
+            <artifactId>kapua-device-management-job-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.kapua</groupId>
             <artifactId>kapua-device-management-packages-api</artifactId>
         </dependency>
     </dependencies>
