--- a/console/web/pom.xml
+++ b/console/web/pom.xml
@@ -77,6 +77,11 @@
 
         <dependency>
             <groupId>org.eclipse.kapua</groupId>
+            <artifactId>kapua-device-management-job-internal</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.kapua</groupId>
             <artifactId>kapua-device-management-registry-internal</artifactId>
         </dependency>
 
