--- a/service/device/management/pom.xml
+++ b/service/device/management/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2018 Eurotech and/or its affiliates and others
+    Copyright (c) 2018, 2019 Eurotech and/or its affiliates and others
 
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
@@ -34,6 +34,7 @@
         <module>api</module>
 
         <module>registry</module>
+        <module>job</module>
 
         <module>all</module>
     </modules>
