Fixed and improved Quartz Scheduler implementation
Signed-off-by: coduz <alberto.codutti@eurotech.com>

--- a/service/scheduler/quartz/src/main/resources/quartz.properties
+++ b/service/scheduler/quartz/src/main/resources/quartz.properties
@@ -20,7 +20,7 @@ org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.tablePrefix=SCHDL_QRTZ_
 
-org.quartz.dataSource.quartzDataSource.connectionProvider.class=org.eclipse.kapua.service.scheduler.trigger.quartz.persistence.KapuaQuartzConnectionProvider
+org.quartz.dataSource.quartzDataSource.connectionProvider.class=org.eclipse.kapua.service.scheduler.quartz.persistence.KapuaQuartzConnectionProvider
 
 #
 # Plugins
