--- a/broker-core/pom.xml
+++ b/broker-core/pom.xml
@@ -88,6 +88,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.kapua</groupId>
+            <artifactId>kapua-device-management-job-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.kapua</groupId>
             <artifactId>kapua-device-management-registry-api</artifactId>
             <scope>provided</scope>
         </dependency>
@@ -194,6 +199,10 @@
             <artifactId>netty-all</artifactId>
         </dependency>
         <!-- misc -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
