--- a/console/web/pom.xml
+++ b/console/web/pom.xml
@@ -112,6 +112,10 @@
             <groupId>org.eclipse.kapua</groupId>
             <artifactId>kapua-job-engine-jbatch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.kapua</groupId>
+            <artifactId>kapua-job-engine-remote</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.kapua</groupId>
