Refactored console view to make use of the TriggerDefinitionService
Signed-off-by: coduz <alberto.codutti@eurotech.com>

--- a/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
+++ b/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
@@ -158,10 +158,15 @@ dialogAddScheduleEndsOnLabel=Ends on:
 dialogAddScheduleEndsOnTooltip=Select a specific end date for the job.
 dialogAddScheduleEndsOnTimeLabel=Time
 dialogAddScheduleEndsOnTimeTooltip=Select a specific end time for the job.
-dialogAddScheduleRetryIntervalLabel=Retry interval
-dialogAddScheduleRetryIntervalTooltip=Enter a valid retry interval for the job in seconds or enter a valid CRON expression in "CRON Schedule" field.
-dialogAddScheduleCronScheduleLabel=CRON schedule
-dialogAddScheduleCronScheduleTooltip=Enter a valid retry interval in CRON format or enter a valid retry interval in seconds in "Retry interval" field.
+dialogAddScheduleDefinitionCombo=Schedule definition
+dialogAddScheduleDefinitionComboTooltip=Select a schedule definition.
+dialogAddScheduleDefinitionComboEmpty=Select A schedule definition...
+dialogAddTriggerPropertiesFieldSetHeading=Trigger Properties
+
+dialogAddScheduleRetryIntervalLabel=Retry interval [s]
+dialogAddScheduleRetryIntervalTooltip=Enter a valid retry interval for the job in seconds.
+dialogAddScheduleCronScheduleLabel=Cron expression
+dialogAddScheduleCronScheduleTooltip=Enter a valid retry interval in CRON format.
 dialogAddScheduleCronFScheduleDescriptionLabel= The entered CRON schedule must be in UTC.
 dialogAddScheduleConfirmation=Schedule successfully created.
 dialogAddScheduleError=Error while creating schedule: {0}
