Fixed rebase issues
Signed-off-by: coduz <alberto.codutti@eurotech.com>

--- a/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
+++ b/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
@@ -167,7 +167,7 @@ dialogAddScheduleRetryIntervalLabel=Retry interval [s]
 dialogAddScheduleRetryIntervalTooltip=Enter a valid retry interval for the job in seconds.
 dialogAddScheduleCronScheduleLabel=Cron expression
 dialogAddScheduleCronScheduleTooltip=Enter a valid retry interval in CRON format.
-dialogAddScheduleCronFScheduleDescriptionLabel= The entered CRON schedule must be in UTC.
+dialogAddScheduleCronScheduleDescriptionLabel=The entered CRON schedule must be in UTC.
 dialogAddScheduleConfirmation=Schedule successfully created.
 dialogAddScheduleError=Error while creating schedule: {0}
 dialogAddScheduleDatePlaceholder=Select Date
