Fixed broken job start via Trigger
Signed-off-by: coduz <alberto.codutti@eurotech.com>

--- a/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
+++ b/console/module/job/src/main/resources/org/eclipse/kapua/app/console/module/job/client/messages/ConsoleJobMessages.properties
@@ -34,8 +34,8 @@ gridJobStepColumnHeaderDescription=Description
 gridJobSchedulesColumnHeaderName=Name
 gridJobSchedulesColumnHeaderStartsOnFormatted=Starts on
 gridJobSchedulesColumnHeaderEndsOnFormatted=Ends on
-gridJobSchedulesColumnHeaderCronScheduling=Cron scheduling
-gridJobSchedulesColumnHeaderRetryInterval=Retry interval
+gridJobSchedulesColumnHeaderTriggerDefinitionName=Schedule Type
+gridJobSchedulesColumnHeaderValue=Value
 
 jobStartButton=Start
 jobStartDialogHeader=Start Job: {0}
